[project]
name = "zephyrcast"
version = "0.1.0"
description = "Local, short term forecasting using only weather station data from Zephyr"
authors = [
    {name = "Magnus",email = "contact@magnus.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring (>=25.6.0,<26.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "zephyrcast", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
fetch = 'zephyrcast.fetch:run'
prepare = 'zephyrcast.prepare:run'
train = 'zephyrcast.train:run'
