[project]
name = "zephyrcast"
version = "0.1.0"
description = "Local, short-term weather forecasting specifically for paragliding safety, using solely weather station data from Zephyr."
authors = [
    {name = "Magnus",email = "contact@magnus.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring (>=25.6.0,<26.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==2.1.3)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "skforecast (>=0.14.0,<0.15.0)",
    "shap (>=0.46.0,<0.47.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "lightgbm (>=4.6.0,<5.0.0)"
]

[tool.zephyrcast]
data_dir = "data"
output_dir = "output"
models_dir = "models"

[tool.poetry]
packages = [{include = "zephyrcast", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
fetch = 'zephyrcast.fetch:run'
prepare = 'zephyrcast.prepare:run'
train = 'zephyrcast.train:run'
